fixed AdminPanel errors spacing, timer bug

--- a/src/app/admin-panel/admin-panel.component.css
+++ b/src/app/admin-panel/admin-panel.component.css
@@ -89,6 +89,7 @@ button:disabled {
 .error{
     color:red;
     font-size:10px;
+    padding:0;margin:0;
 
 }
 button:hover{
